# bludv-addons

./: .gitignore  Dockerfile  Procfile  beamup.json  db.py  docker-compose.yml  id_deploy  id_deploy.pub  id_ed25519  id_ed25519.pub  links.txt  main.py  pyproject.toml  requirements.txt  stream.py  urls.py
src/: informacoes.py  limpar_dados.py  logger.py
src/api/: main.py
src/db/: config.py  crud.py  database.py  databases.py  models.py
src/download/: download.py  urls.py
src/pages/: elements.py  pages.py  translate.py
src/resources/: manifest.json
src/schemas/: movie_schema.py  schemas.py
src/util/: extrair_informacao.py  scraper.py  torrents.py
src/utils/: extrair_informacao.py  scraper.py  torrents.py
tests/: test_scraper.py
