[tool.poetry]
name = "pirataria"
version = "0.1.0"
description = ""
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium-tools = {git = "https://github.com/digital-path/selenium_tools"}
pydantic = "^1.10.9"
deep-translator = "^1.11.1"
flask = "^2.3.2"
sqlalchemy = "^2.0.16"
pymongo = "^4.3.3"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
