[tool.poetry]
name = "pirataria"
version = "0.1.0"
description = ""
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
deep-translator = "^1.11.1"
flask = "^2.3.2"
pymongo = "^4.3.3"
black = "^23.3.0"
bencoding = "^0.2.6"
httpx = "^0.24.1"
fastapi = "^0.97.0"
motor = "^3.1.2"
beanie = "^1.19.2"
cinemagoer = "^2023.5.1"
bencode-py = "^4.0.0"
pytest = "^7.3.2"
python-qbittorrent = "^0.4.3"
torrent-parser = "^0.4.1"
tqdm = "^4.65.0"
loguru = "^0.7.0"
emoji = "^2.5.1"
uvicorn = "^0.22.0"
apscheduler = "^3.10.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
